--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,17 @@
 <ion-menu [content]="content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Ma Pharmacie</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
   <ion-content>
+    
+    <img src="assets/imgs/images.jpg" style="height: 25%;width: 100%;">
+      
     <ion-list>
-      <button menu-close ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        <ion-icon item-start [name]="p.icon" [color]="secondary"></ion-icon>
         {{p.title}}
       </button>
     </ion-list>
   </ion-content>
 
 </ion-menu>
-
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
