Fix Redirection to medics base

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,10 @@
-<ion-menu [content]="content">
+<ion-menu [content]="content" >
 
-  <ion-content>
+  <ion-content style="background: #87d567;font-style:white">
     
-    <img src="assets/imgs/images.jpg" style="height: 25%;width: 100%;">
+    <img src="assets/imgs/images.jpg" style="height: 27%;width: 100%;">
       
-    <ion-list>
+    <ion-list style="background: #87d567">
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         <ion-icon item-start [name]="p.icon" [color]="secondary"></ion-icon>
         {{p.title}}
