--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,45 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.ios, .md, .wp {
+
+    h1 {
+      font-size: 3.0rem;
+    }
+
+    h2 {
+      font-size: 2.4rem;
+    }
+    
+    button {
+      text-transform: none;
+    }
+    
+    .tabs .tabbar {
+      background-color: transparent;
+    }
+    
+  }
+  ion-content {
+    @include linear-gradient(right,$midnight-city);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+  }
+  
+.menu-inner .item {
+  @include linear-gradient(right,$midnight-city);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+}
+
+ 
+.menu-inner > ion-header, 
+.menu-inner > ion-content, 
+.menu-inner > ion-footer {
+  @include linear-gradient(right,$midnight-city);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+}
