--- a/src/pages/list_pharmacie/list_pharmacie.scss
+++ b/src/pages/list_pharmacie/list_pharmacie.scss
@@ -1,18 +1,37 @@
-list_pharmacie{
-    #floating-panel {
+page-list_pharmacie{
+ 
+    ion-list {
+      margin: 0 !important;
+    }
+   
+    #please-connect {
       position: absolute;
-      top: 10px;
-      right: 5px;
-      z-index: 5;
-      background-color: #fff;
-      padding: 5px;
-      border: 1px solid #999;
-      text-align: center;
-      font-family: 'Roboto','sans-serif';
-      line-height: 30px;
-      padding-left: 10px;
-    }
-    #map {
+      background-color: #000;
+      opacity: 0.5;
+      width: 100%;
       height: 100%;
+      z-index: 1;
     }
+   
+    #please-connect p {
+        color: #fff;
+        font-weight: bold;
+        text-align: center;
+        position: relative;
+        font-size: 1.6em;
+        top: 30%;
+    }
+   
+    .scroll-content {
+        overflow: hidden;
+    }
+   
+    #map {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+   
   }
